--- a/thakur-portfolio/index.html
+++ b/thakur-portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Jaideep</title>
   </head>
   <body>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
